--- a/javaEEServer/pom.xml
+++ b/javaEEServer/pom.xml
@@ -35,6 +35,7 @@
             <scope>test</scope>
         </dependency>
 
+        <!--        mybatisplus-->
         <dependency>
             <groupId>com.baomidou</groupId>
             <artifactId>mybatis-plus-boot-starter</artifactId>
@@ -44,6 +45,12 @@
             <groupId>com.baomidou</groupId>
             <artifactId>mybatis-plus-boot-starter</artifactId>
             <version>3.4.2</version>
+        </dependency>
+
+        <dependency>
+            <groupId>com.auth0</groupId>
+            <artifactId>java-jwt</artifactId>
+            <version>3.19.2</version>
         </dependency>
     </dependencies>
     <dependencyManagement>
