--- a/javaEEServer/src/main/resources/application-dev.yml
+++ b/javaEEServer/src/main/resources/application-dev.yml
@@ -4,10 +4,10 @@ spring:
   application:
     name: javaee_server
   datasource:
-      driver-class-name: com.mysql.cj.jdbc.Driver
-      url: jdbc:mysql://localhost:3306/【数据库】?serverTimezone=Asia/Shanghai&useUnicode=true&characterEncoding=utf-8&zeroDateTimeBehavior=convertToNull&useSSL=false&allowPublicKeyRetrieval=true
-      username: root
-      password: 123456
+    driver-class-name: com.mysql.cj.jdbc.Driver
+    url: jdbc:mysql://127.0.0.1:3306/javaeework?useUnicode=true&characterEncoding=utf-8&useSSL=false
+    username: root
+    password: 123456
 mybatis-plus:
   configuration:
     #在映射实体或者属性时，将数据库中表名和字段名中的下划线去掉，按照驼峰命名法映射
