--- a/wechat/app.json
+++ b/wechat/app.json
@@ -1,24 +1,40 @@
 {
     "pages": [
-        
-        "pages/login/login",
-        "pages/register/register",
-        "pages/main/main",
-        "pages/mail/mail",
-        "pages/sendOf/senfOf",
-        "pages/sendTO/sendTo",
-        "pages/my/my",
-        "pages/expresslist/expresslist",
-        "pages/courseModel/course",
-        "pages/administration/administration",
-        "pages/vacation/vacation",
-        "pages/dormitory/dormitory",
-        "pages/certification/certification",
-        "pages/activity/activity",
-        "pages/societies/societies",
-        "pages/activityurl/activityurl",
-        "pages/social/social",
-        "pages/signup/signup"
+      "pages/login/login",
+      "pages/HealthSafety/HealthSafety",
+      "pages/financeLogistics/financial",
+      "pages/register/register",
+      "pages/main/main",
+      "pages/mail/mail",
+      "pages/sendOf/senfOf",
+      "pages/sendTO/sendTo",
+      "pages/my/my",
+      "pages/expresslist/expresslist",
+      "pages/course/course",
+      "pages/paymentSystem/PaymentSystem",
+      "pages/financialInquiries/financialInquiries",
+      "pages/logisticsServices/logisticsServices",
+      "pages/HealthCheck-in/HealthCheck-in",
+      "pages/EmergencyContacts/EmergencyContacts",
+      "pages/MedicalAppointments/MedicalAppointments",
+      "pages/administration/administration",
+      "pages/vacation/vacation",
+      "pages/dormitory/dormitory",
+      "pages/certification/certification",
+      "pages/activity/activity",
+      "pages/societies/societies",
+      "pages/activityurl/activityurl",
+      "pages/social/social",
+      "pages/signup/signup",
+      "pages/schooltimetable/schooltimetable",
+      "pages/courseselection/courseselection",
+      "pages/scoreinquiry/scoreinquiry",
+      "pages/examarrangement/examarrangement",
+      "pages/bookservice/bookservice",
+      "pages/bookoverview/bookoverview",
+      "pages/borrowingbooks/borrowingbooks",
+      "pages/returningbooks/returningbooks",
+      "pages/history/history"
     ],
     "tabBar": {
         "color": "#8a8a8a",
