--- a/web/package.json
+++ b/web/package.json
@@ -9,7 +9,9 @@
   },
   "dependencies": {
     "@element-plus/icons-vue": "^2.3.1",
+    "@types/echarts": "^4.9.22",
     "axios": "^1.6.2",
+    "echarts": "^5.5.0",
     "element-plus": "^2.7.5",
     "pinia": "^2.1.7",
     "pinia-persistedstate-plugin": "^0.1.0",
